samples/_failures_safe/1761318398_1bb05c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b15e1fe.c: In function ‘main’:
./samples/SAFE/__tmp_1b15e1fe.c:160:16: error: missing terminating " character
  160 |         printf("ERROR: Unexpected token '%s
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_1b15e1fe.c:160:9: error: expected expression at end of input
  160 |         printf("ERROR: Unexpected token '%s
      |         ^~~~~~
./samples/SAFE/__tmp_1b15e1fe.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1b15e1fe.c:160:9: error: expected declaration or statement at end of input
